<resources>
    <string name="app_name">WeightLiftingApp</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <!--Main Activity Page-->
    <string name="go_to_calculator_button_text">Go To Calculators</string>
    <string name="go_to_profile_button_text">Log In</string>

    <!--Login Activity Page-->
    <string name="username">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_title">Power Buddy</string>
    <string name="username_already_exists_tag">username already exists, choose a different one</string>


    <!--One Rep Max Activity Page-->
    <string name="lift_text">enter lift amount</string>
    <string name="repetitions_text">how many repetitions</string>
    <string name="one_rep_max_activity_title">One Rep Max Calculator</string>

    <!--Wilks Activity Page-->
    <string name="body_weight_text">enter body weight</string>
    <string name="gender_text">enter gender</string>
    <string name="wilks_activity_title">Wilks Calculator</string>

    <!--IPF Activity Page-->
    <string name="IPF_total_text">Enter your 3 lift Total</string>
    <string name="IPF_activity_title">IPF Calculator</string>

    <string name="calculate_button_text">Calculate</string>

    <!--Results Activity-->
    <string name="see_weights_in_AR">See Weights In AR</string>
    <string name="action_standard_plates">standard plates</string>
    <string name="action_powerlifting_plates">powerlifting plates</string>

    <!--Calculator Selection Activity-->
    <string name="calculator_selection_activity_title">Select Calculator</string>
    <string name="one_rep_max_calculator_button_text">One Rep Max Calculator</string>
    <string name="wilks_calculator_button_text">Wilks Calculator</string>
    <string name="IPF_calculator_button_text">IPF Calculator</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!--User Profile Activity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="powerlifting_profile__text">powerlifting</string>
    <string name="general_lifting_profile__text">general exercise</string>

    <!--Nav Side Bar-->
    <string name="side_bar_one_rep_max_calculator">One Rep Max Calculator</string>
    <string name="side_bar_wilks_calculator">Wilks Calculator</string>
    <string name="side_bar_ipf_calculator">IPF Calculator</string>
    <string name="side_bar_achievements">Achievements</string>
    <string name="side_bar_log_out">Sign Out</string>
    <string name="title_activity_w_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">must be 7 characters or longer</string>
    <string name="login_failed">"Login failed"</string>
</resources>
