<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/general_background"
    tools:context=".ui.login.wLoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/LoginTitle"
        android:src="@drawable/login_page_background"/>

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:text="@string/login_title"
        android:layout_above="@id/username"
        />

    <TextView
        android:id="@+id/LoginErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="center"
        android:layout_above="@id/username"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/white"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@id/username"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <RelativeLayout
        android:id="@+id/RegisterOrLoginSwitchLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/password"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/RegisterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/RegisterOrLoginSwitch"
            android:text="@string/action_register"
            android:gravity="right"

            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/RegisterOrLoginSwitch"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:showText="false"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/LoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/RegisterOrLoginSwitch"
            android:text="@string/action_login"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_blue_background"
        android:layout_below="@id/RegisterOrLoginSwitchLayout"
        android:textSize="24sp"
        android:enabled="false"
        android:text="@string/action_register" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/login"
        android:visibility="gone" />
</RelativeLayout>